--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>css exercise four</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -20,7 +21,7 @@
       </div>
       <div class="preview rome">
         <h1>Rome</h1>
-      </div>
+    </div>
     </section>
   </body>
 </html>
